fixed overlap layout, testing arrows

--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -48,6 +48,7 @@
   margin: auto;
   display: grid;
   grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto 4fr auto;
   grid-auto-rows: min-content;
   margin-bottom: 60px;
 }
@@ -63,7 +64,6 @@
   grid-column: 3 / 4;
   grid-row: 2 / 4;
   align-self: end;
-  justify-self: end;
 }
 
 .gridCaption1
@@ -78,6 +78,30 @@
   grid-column: 1 / 3;
   align-self: end;
   margin-top: 2vw;
+  width: 95%;
+}
+
+.arrows
+{
+  grid-column: 2 / 3;
+  max-width: 100%;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.lArrow
+{
+  max-width: 30%;
+  margin-left: 10%;
+  margin-top: 20px;
+}
+
+.rArrow
+{
+  max-width: 30%;
+  align-self: end;
+  justify-self: end;
+  margin-right: 10%;
 }
 
 .left-right
